# GRASPA-test

./: .gitignore  CMakeLists.txt  README.md
app/: data_collection.xml  data_collection.xml.template
data/right_arm/camera_calibration/: cam_calibration_test_output.xml
data/right_arm/grasps_data/layout_0/: YcbBanana_grasp.xml  YcbFoamBrick_grasp.xml  YcbGelatinBox_grasp.xml  YcbMustardBottle_grasp.xml  YcbPottedMeatCan_grasp.xml
data/right_arm/grasps_data/layout_1/: YcbBanana_grasp.xml  YcbChipsCan_grasp.xml  YcbCrackerBox_grasp.xml  YcbMustardBottle_grasp.xml  YcbTennisBall_grasp.xml
data/right_arm/grasps_data/layout_2/: YcbChipsCan_grasp.xml  YcbMasterChefCan_grasp.xml  YcbMustardBottle_grasp.xml  YcbPear_grasp.xml  YcbPottedMeatCan_grasp.xml  YcbScissors_grasp.xml  YcbStrawberry_grasp.xml  YcbTennisBall_grasp.xml
data/right_arm/reaching_test/: reached_poses2.xml  reached_poses3.xml
experiment_data/dexnet/grasps_data/layout_0/: YcbBanana_grasp.xml  YcbGelatinBox_grasp.xml  YcbPottedMeatCan_grasp.xml
experiment_data/dexnet/grasps_data/layout_1/: YcbTennisBall_grasp.xml
experiment_data/dexnet/grasps_data/layout_2/: YcbPear_grasp.xml  YcbScissors_grasp.xml
experiment_data/gpd/grasps_data/layout_0/: YcbBanana_grasp.xml  YcbFoamBrick_grasp.xml
experiment_data/gpd/grasps_data/layout_2/: YcbChipsCan_grasp.xml  YcbMustardBottle_grasp.xml
experiment_data/icub/icub-superquadrics/camera_calibration/: cam_calibration_test_output.xml
experiment_data/icub/icub-superquadrics/reaching_test/: reached_poses1.xml  reached_poses2.xml  reached_poses3.xml
experiment_data/layout_0/: YcbMustardBottle_grasp.xml  YcbPottedMeatCan_grasp.xml
experiment_data/layout_1/: YcbBanana_grasp.xml  YcbCrackerBox_grasp.xml  YcbPottedMeatCan_grasp.xml
experiment_data/layout_2/: YcbMustardBottle_grasp.xml  YcbScissors_grasp.xml  YcbStrawberry_grasp.xml
experiment_data/panda/: README.md  README.txt  fixer.py  rename.py
experiment_data/panda-dexnet/grasps_data/layout_0/: YcbFoamBrick_grasp.xml  YcbGelatinBox_grasp.xml  YcbPottedMeatCan_grasp.xml
experiment_data/panda-dexnet/grasps_data/layout_1/: YcbBanana_grasp.xml  YcbCrackerBox_grasp.xml  YcbHammer_grasp.xml  YcbMustardBottle_grasp.xml  YcbPottedMeatCan_grasp.xml  YcbTennisBall_grasp.xml
experiment_data/panda-dexnet/grasps_data/layout_2/: YcbMasterChefCan_grasp.xml  YcbMediumClamp_grasp.xml  YcbMustardBottle_grasp.xml  YcbPottedMeatCan_grasp.xml  YcbPowerDrill_grasp.xml  YcbScissors_grasp.xml  YcbStrawberry_grasp.xml  YcbTennisBall_grasp.xml  YcbTomatoSoupCan_grasp.xml
experiment_data/panda-gpd/camera_calibration/: cam_calibration_test_output.xml
experiment_data/panda-gpd/grasps_data/layout_0/: YcbFoamBrick_grasp.xml  YcbGelatinBox_grasp.xml
experiment_data/panda-gpd/grasps_data/layout_1/: YcbCrackerBox_grasp.xml  YcbPottedMeatCan_grasp.xml
experiment_data/panda-gpd/grasps_data/layout_2/: YcbChipsCan_grasp.xml  YcbMasterChefCan_grasp.xml  YcbMediumClamp_grasp.xml  YcbMustardBottle_grasp.xml  YcbScissors_grasp.xml  YcbStrawberry_grasp.xml
experiment_data/panda-graspnet-1/grasps_data/layout_0/: YcbFoamBrick_grasp.xml
experiment_data/panda-graspnet-1/grasps_data/layout_1/: YcbChipsCan_grasp.xml
experiment_data/panda-graspnet-1/grasps_data/layout_2/: YcbTennisBall_grasp.xml
experiment_data/panda-graspnet-2/grasps_data/layout_1/: YcbChipsCan_grasp.xml
experiment_data/panda-graspnet-2/grasps_data/layout_2/: YcbChipsCan_grasp.xml  YcbScissors_grasp.xml  YcbTennisBall_grasp.xml
experiment_data/panda-graspnet-3/grasps_data/layout_1/: YcbChipsCan_grasp.xml
experiment_data/panda-graspnet-3/grasps_data/layout_2/: YcbStrawberry_grasp.xml
experiment_data/panda-graspnet-3/reaching_test/: reached_poses2.xml
experiment_data/panda-graspnet-4/grasps_data/layout_2/: YcbPear_grasp.xml  YcbPottedMeatCan_grasp.xml
experiment_data/panda/panda-dexnet/camera_calibration/: cam_calibration_test_output.xml  cam_calibration_test_output2.xml
experiment_data/panda/panda-dexnet/reaching_test/: reached_poses2.xml
experiment_data/panda/panda-gpd/camera_calibration/: cam_calibration_test_output1.xml  cam_calibration_test_output2.xml
experiment_data/panda/panda-gpd/reaching_test/: reached_poses3.xml
experiment_data/panda/panda-graspnet-1/camera_calibration/: cam_calibration_test_output1.xml
experiment_data/panda/panda-graspnet-2/camera_calibration/: cam_calibration_test_output3.xml
experiment_data/panda/panda-graspnet-2/reaching_test/: reached_poses1.xml
experiment_data/panda/panda-graspnet-4/camera_calibration/: cam_calibration_test_output3.xml
experiment_data/panda/panda-graspnet-4/reaching_test/: reached_poses1.xml
experiment_data/panda/panda_gripper/: panda_gripper.xml  panda_gripper_4contacts.xml  panda_gripper_4contacts_simple.xml  panda_gripper_4fingers.xml  panda_gripper_8_contacts.xml
experiment_data/panda/raw_grasps/: README.md  README.txt  parser.py
experiment_data/right_arm/reaching_test/: reached_poses1.xml
src/: CMakeLists.txt
src/aruco-pose-estimation/: CMakeLists.txt  README.md
src/aruco-pose-estimation/conf/: config_base.ini  config_hand.ini  opencv_icub_intrinsics_left  opencv_icub_intrinsics_right
src/aruco-pose-estimation/src/: idl.thrift  main.cpp
src/aruko-pose-estimation/: CMakeLists.txt
src/aruko-pose-estimation/conf/: config.ini  config_base.ini  config_hand.ini  opencv_icub_intrinsics_left  opencv_icub_intrinsics_right  sfm_config.ini
src/aruko-pose-estimation/src/: main.cpp
src/camera-calibration-test/: CMakeLists.txt  README.md
src/camera-calibration-test/conf/: config.ini
src/camera-calibration-test/src/: idl.thrift  main.cpp
src/gaze-ctrl-lib/: CMakeLists.txt
src/gaze-ctrl-lib/include/: GazeController.h
src/gaze-ctrl-lib/src/: GazeController.cpp
src/grasp-and-stability/: CMakeLists.txt  README.md
src/grasp-and-stability/conf/: config.ini
src/grasp-and-stability/src/: idl.thrift  main.cpp
src/reaching-test/: CMakeLists.txt  README.md
src/reaching-test/conf/: config.ini
src/reaching-test/src/: idl.thrift  main.cpp  pugixml.cpp
(+921 files in other folders)
